# poetry-version-exporter

./: .gitignore  README.md  pyproject.toml
.github/workflows/: CI-CD.yml
src/poetry_version_exporter/: cli.py  exporter.py  plugin.py
tests/: test_cli.py  test_exporter.py
