[project]
name = "poetry-version-exporter"
version = "0.1.4"
description = ""
authors = [
    {name = "hallowslab",email = "hallow.tech.lab@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "tomli (>=2.2.1,<3.0.0)",
]

[tool.poetry]
packages = [{ include = "poetry_version_exporter", from = "src" }]

[tool.poetry.scripts]
poetry-version-exporter = "poetry_version_exporter.cli:main"

[tool.taskipy.tasks]
export-version = "poetry run poetry-version-exporter --output src/poetry_version_exporter/_version.py"
format = "ruff format ."
lint = "ruff check ."
fix = "ruff check . --fix"
mypy = "mypy --strict src"
test = "pytest"
cov = "pytest --cov=poetry_version_exporter --cov-report=term --cov-report=html"
all = "task format && task lint && task mypy && task test && task cov"

[tool.coverage.run]
omit = [
    # omit this single file anywhere
    "*/_version.py",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "SIM",
    "C4",
    "RUF",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "ruff>=0.12,<0.13",
    "taskipy>=1.14.1,<2.0.0",

    "mypy==1.8.0; python_version < '3.9'",
    "mypy>=1.16.1,<2.0.0; python_version >= '3.9'",

    "pytest>=7.4.4,<8.0.0; python_version < '3.9'",
    "pytest>=8.4.1,<9.0.0; python_version >= '3.9'",

    "pytest-cov>=4.1.0,<5.0.0; python_version < '3.9'",
    "pytest-cov>=6.2.1,<7.0.0; python_version >= '3.9'",
]
